--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
           "express": "^4.16.3"
      },
      "devDependencies": {
-          "babel-cli": "^6.26.0",
+          "@babel/cli": "^7.8.4",
           "babel-preset-env": "^1.7.0",
           "chai": "^4.1.2",
           "chai-http": "^4.0.0",
